# AT32_test_code

./: CMakeLists.txt  README.md  rtconfig.h
applications/: main.c
drivers/: board.c  board.h
